--- a/_布局/author.html
+++ b/_布局/author.html
@@ -8,7 +8,7 @@ layout: default
 
 <h2>Posts</h2>
 <ul>
-  {% assign filtered_posts = site.posts | where: 'author', page.name %}
+  {% assign filtered_posts = site.posts | where: '乌拉那拉氏狂徒', page.name %}
   {% for post in filtered_posts %}
     <li><a href="{{ post.url }}">{{ post.title }}</a></li>
   {% endfor %}
